# Genji

./: .gitignore  CMakeLists.txt
dic/: kasugadic.csv
include/: aoi.h  config.h  config.h.in  fujitsubo.hh  murasaki.hh
include/ux/: uxMap.hpp
lib/aoi/: CMakeLists.txt  aoi.c  aoiconv.c  aoiconv.h  aoidic.c  aoidic.h  aoimap.h  aoistr.c  aoistr.h
lib/fujitsubo/: CMakeLists.txt  basicwords.txt  fujitsubo.cc  fujitsubo.cpp  fujitsubo_build.h  fujitsubo_table.h  naistjdic2csv.py
lib/fujitsubo/ux/: CMakeLists.txt
lib/murasaki/: CMakeLists.txt  graph.cc  graph.hh  murasaki.cc
lib/ux/: CMakeLists.txt
src/: CMakeLists.txt  main.cc  main.cpp
